# pdf_contract_bot

./: Dockerfile  docker-compose.yml  pyproject.toml
bot/: __main__.py  decorators.py  loguru_logger.py  models.py  settings.py  utils.py
bot/handlers/: handler.py
bot/tests/: test_generate_pdf.py
tests/: test_generate_pdf.py
