[tool.poetry]
name = "pdf-contract-bot"
version = "0.1.0"
description = ""
authors = ["coolworld2049 <coolworld2049@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "23.2.1"
aiogram = "3.8.0"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
attrs = "23.2.0"
certifi = "2024.7.4"
chardet = "5.2.0"
frozenlist = "1.4.1"
idna = "3.7"
magic-filter = "1.0.12"
multidict = "6.0.5"
pillow = "10.4.0"
pydantic = "2.7.4"
pydantic_core = "2.18.4"
reportlab = "4.2.2"
typing_extensions = "4.12.2"
yarl = "1.9.4"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
redis = "^5.0.8"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
